# HW_2_09

./: .gitignore  README.md  authors.json  main.py  main_beautiful.py  models.py  pyproject.toml  seed.py
hw9/hw9/: settings.py
hw9/hw9/spiders/: authors.py  get_urls.py  quotes.py
