[tool.poetry]
name = "hw-2-09"
version = "0.1.0"
description = ""
authors = ["Vitalii Bielimov <vbit2000@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
lxml = "^5.1.0"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"
scrapy = "^2.11.1"
mongoengine = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
